--- a/sass/_notaDesktop.scss
+++ b/sass/_notaDesktop.scss
@@ -185,7 +185,7 @@ $colorPrerroll: #D20A11;
             width: 110px;
             height: 90px;
             margin: 10px;
-            background-image: url(/img/nota_desktop.svg);
+            background-image: url(../img/nota_desktop.svg);
             background-repeat: no-repeat;
         }
 
@@ -193,7 +193,7 @@ $colorPrerroll: #D20A11;
             width: 370px;
             height: 45px;
             margin: 10px;
-            background-image: url(/img/mas_notas_desktop.svg);
+            background-image: url(../img/mas_notas_desktop.svg);
             background-repeat: no-repeat;
         }
 
